--- a/QMP.Web/Views/Shared/_Layout.cshtml
+++ b/QMP.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="~/Scripts/startbootstrap-sb-admin-1.0.4/css/sb-admin.css" rel="stylesheet" />
     <link href="~/Scripts/startbootstrap-sb-admin-1.0.4/css/plugins/morris.css" rel="stylesheet" />
     <link href="~/Scripts/startbootstrap-sb-admin-1.0.4/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
 
 </head>
 
@@ -83,7 +84,7 @@
         <!-- /#page-wrapper -->
     </div>
     <!-- /#wrapper -->
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/bootstrap")
 
   
