--- a/QMP.Web/Areas/WeiXin/Views/Live/HistoryDotNet.cshtml
+++ b/QMP.Web/Areas/WeiXin/Views/Live/HistoryDotNet.cshtml
@@ -1,11 +1,13 @@
-﻿@model DotNet.Highcharts.Highcharts
+﻿@*@model DotNet.Highcharts.Highcharts*@
 @{
-    ViewBag.Title = "HistoryDotNet";
+    ViewBag.Title = "历史实况";
     Layout = "~/Areas/WeiXin/Views/Shared/_Layout.cshtml";
 }
 
 
-@(Model)
+@(ViewBag.Chart2 as DotNet.Highcharts.Highcharts)
+@(ViewBag.Chart1 as DotNet.Highcharts.Highcharts)
+@(ViewBag.Chart3 as DotNet.Highcharts.Highcharts)
 @section Scripts{
   
      <script src="@Url.Content("~/Scripts/Highcharts-4.0.1/js/highcharts-all.js")" type="text/javascript"></script>
