--- a/QMP.Web/Areas/Admin/Views/Menu/Index.cshtml
+++ b/QMP.Web/Areas/Admin/Views/Menu/Index.cshtml
@@ -202,8 +202,7 @@
     @*<script src="~/Scripts/jquery-2.2.3.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>*@
     @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/jqueryui");
-
+<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
     <script type="text/javascript">
 
         var currentaccountid = "@ViewBag.AccountID";
