--- a/QMP.Web/Areas/Admin/Views/Messages/List.cshtml
+++ b/QMP.Web/Areas/Admin/Views/Messages/List.cshtml
@@ -103,7 +103,7 @@
 
 <div class="row">
     <div class="col-md-12 text-center">
-        @Html.PagedListPager((IPagedList)Model, page => Url.Action("List", new { id = page }))
+        @Html.PagedListPager((IPagedList)Model, page => Url.Action("List", new { aid=,id = page }))
 
 
     </div>
