--- a/QMP.Web/Areas/WeiXin/Views/ServiceInfos/List.cshtml
+++ b/QMP.Web/Areas/WeiXin/Views/ServiceInfos/List.cshtml
@@ -99,7 +99,7 @@
 
         <div class="row">
             <div class="col-md-12 text-center">
-                @Html.PagedListPager((IPagedList)Model, page => Url.Action("List", new { id = page }))
+                @Html.PagedListPager((IPagedList)Model, page => Url.Action("List", new { aid= ViewBag.AccountId,cname= ViewBag.CategoryName, id = page }))
 
 
             </div>
