--- a/QMP.Web/Areas/Admin/Views/OfficialAccounts/Add.cshtml
+++ b/QMP.Web/Areas/Admin/Views/OfficialAccounts/Add.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "添加公众号";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
